--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cookie-session": "^2.0.0",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
+    "moment": "^2.29.4",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "pg": "^8.5.1",
