--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pg": "^8.5.1",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.4",
