--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
-    "styled-components": "^5.3.8"
+    "styled-components": "^5.3.8",
+    "sweetalert2": "^11.7.3"
   },
   "scripts": {
     "start": "node server/server.js",
